--- a/principal.html
+++ b/principal.html
@@ -71,9 +71,13 @@
                                 </button>
                                 <ul id="myDropdown"
                                   class="absolute hidden bg-white border border-gray-300 min-w-full rounded mt-1 text-gray-700 shadow">
-                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">Opção 1</a></li>
-                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">Opção 2</a></li>
-                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">Opção 3</a></li>
+                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">1x Por semana</a></li>
+                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">2x Por semana</a></li>
+                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">3x Por semana</a></li>
+                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">4x Por semana</a></li>
+                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">5x Por semana</a></li>
+                                  <li><a class="block px-4 py-2 hover:bg-gray-100" href="#">6x Por semana</a></li>
+                                  
                                 </ul>
                               </div>
                          
