--- a/aaa.html
+++ b/aaa.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perst</title>
 </head>
 <div class="">
     <div class="p-8 lg:w-1/2 mx-auto">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="flex items-center justify-center mt-8"> <button
                         class="text-white py-2 px-4 uppercase rounded bg-indigo-500 hover:bg-indigo-600 shadow hover:shadow-lg font-medium transition transform hover:-translate-y-0.5">
-                        Login </button> </div>
+                      <a href="principal.html"> Login </a></button> </div>
             </form>
         </div>
     </div>
