--- a/principal.html
+++ b/principal.html
@@ -88,7 +88,7 @@
                 <div class="mb-4">
                   <button
                     class="font-medium text-sm inline-flex items-center justify-center px-3 py-2 border border-transparent rounded leading-5 shadow-sm transition duration-150 ease-in-out w-full bg-indigo-500 hover:bg-indigo-600 text-white focus:outline-none focus-visible:ring-2"><a
-                      href="tidy/tidy-table/index.html">Gerar treino</a></button>
+                      href="index.html">Gerar treino</a></button>
                 </div>
                 <div class="text-xs text-gray-500 italic text-center">Ao apertar, você concorda com nossos termos de
                   privacidade</div>
