--- a/cadastro.html
+++ b/cadastro.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="flex items-center justify-center mt-8"> <button
                             class="text-white py-2 px-4 uppercase rounded bg-indigo-500 hover:bg-indigo-600 shadow hover:shadow-lg font-medium transition transform hover:-translate-y-0.5">
-                           Criar conta </button> </div>
+                           <a href="aaa.html"> Criar conta </button></a> </div>
                 </form>
             </div>
         </div>
